--- a/Ex7_IntentLogin/app/src/main/res/layout/activity_home.xml
+++ b/Ex7_IntentLogin/app/src/main/res/layout/activity_home.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
-    tools:context=".HomeActivity">
+    android:background="#FACADB"
+    android:gravity="center"
+    android:padding="20dp">
+
 
     <TextView
+        android:id="@+id/tvWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chào mừng bạn đến với HomeActivity!"
+        android:text="Chào mừng!"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginBottom="20dp"
-        android:textColor="@android:color/white"/>
+        android:layout_marginBottom="20dp"/>
+
+    <ImageView
+        android:id="@+id/imgWelcome"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="20dp"/>
 
     <Button
         android:id="@+id/btnLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:padding="10dp"
         android:text="Đăng xuất"
-        android:textColor="@android:color/white" />
-
+        android:backgroundTint="@android:color/holo_red_light"
+        android:textColor="@android:color/white"/>
 </LinearLayout>
