--- a/Ex7_IntentLogin/app/src/main/res/layout/activity_login.xml
+++ b/Ex7_IntentLogin/app/src/main/res/layout/activity_login.xml
@@ -1,30 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    android:padding="24dp"
+    android:gravity="center"
+    android:background="#FACADB">
 
+    <!-- Tiêu đề -->
+
+    <!-- Email -->
+    <TextView
+        android:id="@+id/tvTitleLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Đăng nhập"
+        android:textColor="#3F51B5"
+        android:textSize="26sp"
+        android:textStyle="bold" />
+
+    <!-- Tên đăng nhập -->
+
+    <EditText
+        android:id="@+id/edtEmail"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="12dp"
+        android:background="@android:drawable/editbox_background"
+        android:hint="Nhập Email"
+        android:inputType="textEmailAddress"
+        android:padding="12dp" />
+
+    <!-- Mật khẩu -->
     <EditText
         android:id="@+id/edtUsername"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Nhập tên đăng nhập" />
+        android:layout_height="50dp"
+        android:layout_marginBottom="12dp"
+        android:background="@android:drawable/editbox_background"
+        android:hint="Nhập tên đăng nhập"
+        android:padding="12dp" />
 
     <EditText
         android:id="@+id/edtPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:hint="Nhập mật khẩu"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:padding="12dp"
+        android:background="@android:drawable/editbox_background"
+        android:layout_marginBottom="20dp" />
 
+    <!-- Nút đăng nhập -->
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Đăng nhập" />
+        android:layout_height="50dp"
+        android:text="Đăng nhập"
+        android:backgroundTint="#3F51B5"
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
