--- a/Ex7_IntentLogin/app/src/main/res/layout/activity_home.xml
+++ b/Ex7_IntentLogin/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -19,15 +20,19 @@
 
     <ImageView
         android:id="@+id/imgWelcome"
+
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginBottom="20dp"/>
+        app:srcCompat="@mipmap/cinamon" />
+
 
     <Button
         android:id="@+id/btnLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#3F51B5"
         android:text="Đăng xuất"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white" />
+
+
 </LinearLayout>
