--- a/Ex_LoginPage/app/src/main/res/drawable/icon_password.xml
+++ b/Ex_LoginPage/app/src/main/res/drawable/icon_password.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="@color/pink"
-        android:pathData="M12,12A4,4 0 1,0 12,4A4,4 0 0,0 12,12M12,14C9.33,14 4,15.34 4,18V20H20V18C20,15.34 14.67,14 12,14Z"/>
+        android:pathData="M12,17a2,2 0 1,0 0-4 2,2 0 0,0 0,4Zm6-6V9a6,6 0 0,0-12,0v2H4v10h16V11h-2Zm-8-2a4,4 0 0,1 8,0v2h-8V9Z"/>
 </vector>
