--- a/Ex_KidsCorner2/app/src/main/res/values/preloaded_fonts.xml
+++ b/Ex_KidsCorner2/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/</item>
         <item>@font/saira</item>
         <item>@font/saira_bold</item>
+        <item>@font/saira_medium</item>
         <item>@font/sarina</item>
     </array>
 </resources>
