--- a/Ex3_SimpleSumApp_Lamlai/app/src/main/res/layout/activity_main.xml
+++ b/Ex3_SimpleSumApp_Lamlai/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:scrollbarSize="4dp"
+    tools:context=".MainActivity"
+    tools:layout_editor_absoluteX="-52dp"
+    tools:layout_editor_absoluteY="364dp">
 
     <EditText
         android:id="@+id/edtSoA"
@@ -15,61 +18,109 @@
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/edtSoB"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.677"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.632" />
+        app:layout_constraintHorizontal_bias="0.268"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.364" />
 
     <EditText
         android:id="@+id/edtSoB"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginBottom="524dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="76dp"
         android:background="@drawable/custom_edt"
         android:ems="10"
         android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/btnTinhCong"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="51dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="144dp"
         android:fontFamily="@font/saira_medium"
         android:text="Số A"
         android:textColor="@color/dark_pink"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/edtSoA"
-        app:layout_constraintHorizontal_bias="0.214"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginBottom="549dp"
+        android:layout_width="48dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/saira_medium"
         android:text="Số B"
         android:textColor="@color/dark_pink"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/edtSoB"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnTinhCong"
+        android:layout_width="193dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="190dp"
+        android:layout_marginEnd="131dp"
+        android:layout_marginBottom="96dp"
+        android:backgroundTint="@color/dark_pink"
+        android:onClick="Xulycong"
+        android:text="Tính Cộng"
+        app:layout_constraintBottom_toTopOf="@+id/edtKQ"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textKQ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="190dp"
-        tools:layout_editor_absoluteY="267dp" />
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="512dp"
+        android:fontFamily="@font/saira_medium"
+        android:text="Kết Quả"
+        android:textColor="@color/dark_pink"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/edtKQ"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edtKQ"
+        android:layout_width="215dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="492dp"
+        android:background="@drawable/custom_edt"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.77"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="263dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="157dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="197dp"
+        android:fontFamily="@font/saira_bold"
+        android:text="Phép Tính Cộng"
+        android:textColor="@color/dark_pink"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
