--- a/Ex3_SimpleSumApp_Lamlai/app/src/main/res/layout/activity_main.xml
+++ b/Ex3_SimpleSumApp_Lamlai/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,64 @@
     tools:layout_editor_absoluteY="364dp">
 
     <EditText
+        android:id="@+id/edtSoB"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:background="@drawable/custom_edt"
+        android:ems="10"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/btnTinhCong"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/edtSoA"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="48dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="56dp"
+        android:fontFamily="@font/saira_medium"
+        android:text="Số B"
+        android:textColor="@color/dark_pink"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textKQ"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <TextView
+        android:id="@+id/textKQ"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira_medium"
+        android:text="Kết Quả"
+        android:textColor="@color/dark_pink"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/edtKQ"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira_medium"
+        android:text="Số A"
+        android:textColor="@color/dark_pink"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/edtSoA"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <EditText
         android:id="@+id/edtSoA"
         android:layout_width="200dp"
         android:layout_height="60dp"
@@ -18,109 +76,65 @@
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/edtSoB"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.268"
+        app:layout_constraintHorizontal_bias="0.184"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.364" />
-
-    <EditText
-        android:id="@+id/edtSoB"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="76dp"
-        android:background="@drawable/custom_edt"
-        android:ems="10"
-        android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/btnTinhCong"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="144dp"
-        android:fontFamily="@font/saira_medium"
-        android:text="Số A"
-        android:textColor="@color/dark_pink"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="48dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="64dp"
-        android:fontFamily="@font/saira_medium"
-        android:text="Số B"
-        android:textColor="@color/dark_pink"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/edtSoB"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <Button
         android:id="@+id/btnTinhCong"
         android:layout_width="193dp"
         android:layout_height="55dp"
-        android:layout_marginStart="190dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="96dp"
         android:backgroundTint="@color/dark_pink"
         android:onClick="Xulycong"
         android:text="Tính Cộng"
         app:layout_constraintBottom_toTopOf="@+id/edtKQ"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.563"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textKQ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="512dp"
-        android:fontFamily="@font/saira_medium"
-        android:text="Kết Quả"
-        android:textColor="@color/dark_pink"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/edtKQ"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.743"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/edtSoB"
+        app:layout_constraintVertical_bias="0.5" />
 
     <EditText
         android:id="@+id/edtKQ"
         android:layout_width="215dp"
         android:layout_height="64dp"
-        android:layout_marginTop="492dp"
         android:background="@drawable/custom_edt"
         android:ems="10"
         android:inputType="numberDecimal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.77"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.361"
+        app:layout_constraintStart_toEndOf="@+id/textKQ"
+        app:layout_constraintTop_toBottomOf="@+id/btnTinhCong"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="263dp"
         android:layout_height="59dp"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="197dp"
         android:fontFamily="@font/saira_bold"
         android:text="Phép Tính Cộng"
         android:textColor="@color/dark_pink"
         android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/edtSoA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.344"
+        app:layout_constraintHorizontal_bias="0.689"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="22dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
